--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,7 +5,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "d747f070e42dd21e2649b75090f5b0d45c6ec8e0",
+   "rev": "e6d3a32d66252a70fda1d56463e1da975b3b8f53",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -25,7 +25,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "9339d48cc3b7431b6353af47f303691e9d4da229",
+   "rev": "c792cfd1efe6e01cb176e158ddb195bedfb7ad33",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -65,11 +65,11 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "add4983f36eb4aa1f8b4700300e6fd8edd0b6bdc",
+   "rev": "f5539c670fc68d1db75dda6adb684c17c82675d3",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
    "inputRev": null,
    "inherited": false,
    "configFile": "lakefile.lean"}],
- "name": "Project",
+ "name": "LeanInVienna",
  "lakeDir": ".lake"}
