--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "**/lake-manifest.json": true,
         "**/lakefile.toml": true,
         "**/lean-toolchain": true,
-        "**/LICENSE": true
+        "**/LICENSE": true,
+        "**/solutions": true
     }
 }
