--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -61,11 +61,21 @@
    "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.toml"},
+  {"url": "https://github.com/siddhartha-gadgil/LeanSearchClient.git",
+   "type": "git",
+   "subDir": null,
+   "scope": "",
+   "rev": "c260ed920e2ebd23ef9fc8ca3fd24115e04c18b1",
+   "name": "LeanSearchClient",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/mathlib4.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "216c754008de909a8ecc89695c745846c9b736a3",
+   "rev": "d27a23a602240dedf3dffe70ec05cbea7059e8ea",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
    "inputRev": null,
